# ssvio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: packages.cmake
config/: kitti_00.yaml
doc/: Chinese.md
include/common/: couttools.hpp  read_kitii_dataset.hpp
include/ssvio/: algorithm.hpp  backend.hpp  camera.hpp  feature.hpp  frame.hpp  frontend.hpp  g2otypes.hpp  keyframe.hpp  loopclosing.hpp  map.hpp  mappoint.hpp  orbextractor.hpp  orbpattern.hpp  orbvocabulary.hpp  setting.hpp  system.hpp
include/ui/: cloud_ui.hpp  pangolin_window.hpp  pangolin_window_impl.hpp  trajectory_ui.hpp
scripts/: kitti_poses_and_timestamps_to_trajectory.py
src/ssvio/: CMakeLists.txt  backend.cpp  camera.cpp  feature.cpp  frame.cpp  frontend.cpp  keyframe.cpp  loopclosing.cpp  map.cpp  mappoint.cpp  orbextractor.cpp  orbpattern.cpp  setting.cpp  system.cpp
src/ui/: CMakeLists.txt  cloud_ui.cpp  pangolin_window.cpp  pangolin_window_impl.cpp  trajectory_ui.cpp
test/: CMakeLists.txt  test_realsense_d435i.cpp  test_system.cpp  test_ui.cpp
