find_package(realsense2)
add_executable(test_ui test_ui.cpp)
target_link_libraries(test_ui ui ${OpenCV_LIBS} glog gflags)
add_executable(test_system test_system.cpp)
target_link_libraries(test_system ui ${OpenCV_LIBS} glog gflags ssvio ui ${dbow_libs} ${g2o_libs})

if(realsense2_FOUND)
    include_directories( ${realsense_INCLUDE_DIR} )
    add_executable(test_realsense_d435i test_realsense_d435i.cpp)
    target_link_libraries(test_realsense_d435i ui ${OpenCV_LIBS} glog gflags ssvio ui ${dbow_libs} ${g2o_libs} ${realsense2_LIBRARY})
endif()